Try fix for web browsers not showing bold text

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -6,6 +6,10 @@ body {
 }
 */
 
+h1, h2, h3, h4, h5, h6, p, div { /* reset for mobile browsers */
+  font-weight: normal;
+}
+
 html {
   margin: 0;
   padding: 0;
